| Bug #8978 | Crash on 'select format ...' | ||
|---|---|---|---|
| Submitted: | 5 Mar 2005 13:48 | Modified: | 7 Mar 2005 15:37 |
| Reporter: | Joerg Bruehe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 4.0.24 | OS: | Other (IRIX 64bit) |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
[7 Mar 2005 14:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/22732
[7 Mar 2005 15:35]
Alexander Barkov
Ok to push

Description: Release build of 4.0.24, based on ChangeSet 1.2073 05/03/04 12:31:30 joerg@mysql.com +1 -0 Please the Sun C compiler by qualifying 'inline' as 'static inline'. Crash in all non-'debug' variants on 'octane2', not observed on any othet platform yet: func_misc [ fail ] Errors are (from ...) : .../mysqltest: At line 5: query 'select format(1.5555,0),format(123.5555,1),format(1234.5555,2),format(12345.5555,3),format(123456.5555,4),format(1234567.5555,5),format("12345.2399",2)' failed: 2013: Lost connection to MySQL server during query (the last line(s) may be the ones that caused the die() in mysqltest) Ending Tests Shutting-down MySQL daemon master not cooperating with mysqladmin, will try manual kill kill: 39433860: no such process master refused to die. Sending SIGKILL kill: 39433860: no such process Master shutdown finished Slave shutdown finished Resuming Tests How to repeat: Build + test on octane2.