Fix for bug#8978 : Crash on 'select format ...'